# jrk-g2-rs

./: .mergify.yml  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  README.md  flake.nix  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: ci.yml
arduino/examples/: arduino-uno-i2c.rs  arduino-uno-serial.rs
examples/: rpi-i2c.rs  rpi-serial.rs  stm32-i2c.rs  stm32-serial.rs
src/: blocking_i2c.rs  enums.rs  i2c.rs  jrk.rs  lib.rs  serial.rs
