[package]
name = "jrk-g2"
version = "1.0.1"
authors = ["Guilhem Saurel <guilhem.saurel@laas.fr>"]
edition = "2021"
description = "A rust embedded driver for pololu Jrk G2"
documentation = "https://docs.rs/jrk-g2-rs"
readme = "README.md"
repository = "https://github.com/nim65s/jrk-g2-rs"
license = "BSD-2-Clause"
categories = ["embedded", "hardware-support", "no-std", "science::robotics"]
exclude = ["arduino", "memory.x"]

[features]
default = []
stm32 = ["dep:cortex-m", "dep:cortex-m-rt", "dep:panic-halt", "dep:stm32f1xx-hal"]
rpi = ["dep:linux-embedded-hal"]
ufmt = ["dep:ufmt"]

[dependencies]
embedded-hal = "0.2.4"
nb = "1.0.0"
ufmt = { version = "0.1.0", optional = true }
cortex-m = { version = "0.6.4", optional = true }
cortex-m-rt = { version = "0.6.13", optional = true }
panic-halt = { version = "0.2.0", optional = true }
stm32f1xx-hal = { version = "0.7.0", features = ["rt", "stm32f103", "medium"], optional = true}
linux-embedded-hal = { version = "0.3.0", optional = true }

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
