[package]
name = "jrk-g2"
version = "2.2.0"
authors = ["Guilhem Saurel <guilhem.saurel@laas.fr>"]
edition = "2021"
description = "A rust embedded driver for pololu Jrk G2"
documentation = "https://docs.rs/jrk-g2-rs"
readme = "README.md"
repository = "https://github.com/nim65s/jrk-g2-rs"
license = "BSD-2-Clause"
categories = ["embedded", "hardware-support", "no-std", "science::robotics"]
exclude = ["arduino", "memory.x"]

[features]
default = []
stm32 = ["dep:cortex-m", "dep:cortex-m-rt", "dep:panic-halt", "dep:stm32f1xx-hal"]
rpi = ["dep:linux-embedded-hal"]
ufmt = ["dep:ufmt"]
postcard = ["dep:postcard"]
serde = ["dep:serde"]

[dependencies]
embedded-hal = "0.2.7"
nb = "1.1.0"
ufmt = { version = "0.2.0", optional = true }
cortex-m = { version = "0.7.7", optional = true }
cortex-m-rt = { version = "0.7.3", optional = true }
panic-halt = { version = "0.2.0", optional = true }
stm32f1xx-hal = { version = "0.10.0", features = ["rt", "stm32f103", "medium"], optional = true}
linux-embedded-hal = { version = "0.3.2", optional = true }
postcard = { version = "1.0.5", features = ["postcard-derive", "experimental-derive"], optional = true }
serde = { version = "1.0.151", default-features = false, features = ["derive"], optional = true }

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations


[package.metadata.release]
pre-release-replacements = [
  {file="CHANGELOG.md", search="Unreleased", replace="{{version}}", min=1},
  {file="CHANGELOG.md", search="\\.\\.\\.HEAD", replace="...{{tag_name}}", exactly=1},
  {file="CHANGELOG.md", search="<!-- ReleaseDate -->", replace=" - {{date}}", min=1},
  {file="CHANGELOG.md", search="<!-- next-header -->", replace="<!-- next-header -->\n## [Unreleased] <!-- ReleaseDate -->\n", exactly=1},
  {file="CHANGELOG.md", search="<!-- next-url -->", replace="<!-- next-url -->\n[Unreleased]: https://github.com/nim65s/jrk-g2-rs/compare/{{tag_name}}...HEAD", exactly=1},
]
